# multi-backgrounds-daemon

./: .autogen.sh.swp  AUTHORS  Makefile.am  README  autogen.sh  configure.in  multi-backgrounds-daemon.spec.in
data/: Makefile.am  multi-backgrounds-daemon.desktop
debian/: README.Debian  changelog  control  copyright  multi-desktops-daemon.1  rules
src/: Makefile.am  multi-backgrounds-daemon.c  multi-backgrounds-daemon.spec.in
