AC_INIT(src/multi-backgrounds-daemon.c)
AC_PREREQ([2.52])

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(multi-backgrounds-daemon, 0.1.4)

AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC

PKG_CHECK_MODULES(LIBWNCK, libwnck-1.0)
AC_SUBST(LIBWNCK_CFLAGS)
AC_SUBST(LIBWNCK_LIBS)

PKG_CHECK_MODULES(GCONF, gconf-2.0)
AC_SUBST(GCONF_CFLAGS)
AC_SUBST(GCONF_LIBS)

PKG_CHECK_MODULES(VFS, gnome-vfs-2.0)
AC_SUBST(VFS_CFLAGS)
AC_SUBST(VFS_LIBS)

PKG_CHECK_MODULES(GTK, gtk+-2.0)
AC_SUBST(GTK_CFLAGS)
AC_SUBST(GTK_LIBS)

AC_OUTPUT([
multi-backgrounds-daemon.spec
Makefile
src/Makefile
data/Makefile
])
